--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello, my names is Ryne and I am looking forward to learning about web development</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Chichago, Illinois</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies include cooking, reading and playing video games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to become a chef</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Seattle Washington</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to learn how development works and mold a career into learning and understanding web development'
+
+      </p>
     </section>
 
     <footer id="footer">
